add remote container dotfiles config

--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -3,5 +3,8 @@
     "telemetry.enableTelemetry": false,
     "window.zoomLevel": 0,
     "python.linting.pylintUseMinimalCheckers": false,
-    "editor.formatOnSave": false
+    "editor.formatOnSave": false,
+    "remote.containers.dotfiles.repository": "git@github.com:joshtrahan/dotfiles.git",
+    "remote.containers.dotfiles.targetPath": "~/.dotfiles",
+    "remote.containers.dotfiles.installCommand": "~/.dotfiles/container_setup.sh"
 }
